api-k8s/2.0-Vault/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: api-app-go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql # nome do svc do MySQL
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
        - name: init-db
          mountPath: /docker-entrypoint-initdb.d # Esse Path é o padrão da imagem do mysql para scripts de inicialização.
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
      volumes:
      - name: mysql-data
        emptyDir: {}
      - name: init-db
        configMap:
          name: init-db-configmap # Referência pra uso do configmap com as instruções iniciais da criação da tabela mysql.---
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: api-app-go
spec:
  selector:
    app: mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  type: ClusterIP
